--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,3 +18,14 @@ footer {
     justify-content: center;
     background: #fff;
 }
+
+
+.navbar-default {
+    border-bottom: 1px solid darkgray;
+    border-radius: 0px;
+
+}
+
+.navbar-nav {
+    margin-top: 8px;
+}
