--- a/src/app/+dashboard/dashboard.component.html
+++ b/src/app/+dashboard/dashboard.component.html
@@ -1,15 +1,2 @@
-<nav class="navbar navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <a class="navbar-brand" href="#">{{name}}</a>
-  </div>
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav" style="float: right;" >
-      <li><a   id="logoutButton" href="javascript:void(0)" [routerLink]="['/login']" >logout</a></li>
-    </ul>
-    
-  </div><!-- /.navbar-collapse -->
-</nav>
+<header (logout)="logout()" [isLoggedIn]="isLoggedIn" ></header>
 <router-outlet></router-outlet>
