--- a/src/app/start-page/start-page.component.html
+++ b/src/app/start-page/start-page.component.html
@@ -1,2 +1,2 @@
-<header (loginIn)="openModal=true" ></header>
+<header (loginIn)="openModalPopUp()" ></header>
 <login [(openModal)]="openModal" ></login>
