--- a/src/app/start-page/login/login-modal/login-modal.component.html
+++ b/src/app/start-page/login/login-modal/login-modal.component.html
@@ -17,7 +17,7 @@
             </div>
             <br>
             <button class="btn btn-primary" type="submit"  [disabled]="!loginForm.form.valid" >
-                {{ 'buttons.login' | translate }}
+                sign in
             </button>
         </form>
     </div>
